--- a/src/Erlkönig.Server/Erlkönig.Server.fsproj
+++ b/src/Erlkönig.Server/Erlkönig.Server.fsproj
@@ -9,6 +9,7 @@
     <Compile Include="Startup.fs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\PKHeX\PKHeX.Core\PKHeX.Core.csproj"/>
     <ProjectReference Include="..\Erlkönig.Client\Erlkönig.Client.fsproj" />
     <PackageReference Include="Bolero.Server" Version="0.11.22-preview31" />
     <PackageReference Include="Bolero.HotReload.Server" Version="0.11.5-preview31" />
